--- a/README.Rmd
+++ b/README.Rmd
@@ -98,7 +98,7 @@ To merge all statements from *statements* object use merge on statements objects
 ```{r merge_statements}
 # merge all statements
 st_all <- merge( st2013, st2014 )
-# check if statement of income is merged:
+# check if balance sheet is merged:
 balance_sheet <- st_all$StatementOfFinancialPositionClassified
 ```
 
